--- a/src/CustomerSide/RestaurantMenu.module.css
+++ b/src/CustomerSide/RestaurantMenu.module.css
@@ -51,3 +51,12 @@ input
   width: 200;
   height: 200;
 }
+.flex{
+  display: flex;
+  width: 300px;
+}
+.button{
+  margin-top: 7px;
+  width: 150px;
+  height: 30px;
+}
