--- a/src/MainSide/LoginAccount.module.css
+++ b/src/MainSide/LoginAccount.module.css
@@ -11,7 +11,6 @@
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black;
-
 }
 .box{
     background-color: white;
@@ -33,7 +32,7 @@
 }
 .button_margin{
     margin-left: 60px;
-    margin-top: 110px;
+    margin-top: 50px;
 }
 .button_size{
     width: 30%;
@@ -47,4 +46,17 @@
     width: 70%;
     height: 25px;
     -webkit-text-security: disc;
+}
+.checkbox
+{
+    margin-top: 20px;
+    margin-left: -30px;
+    width: 70%;
+    height: 25px;
+}
+.checkheader{
+    margin-top: -35px;
+    margin-left: 200px;
+    width: 325px;
+    font-size: 18px;
 }
