--- a/src/MainSide/Main.module.css
+++ b/src/MainSide/Main.module.css
@@ -1,23 +1,22 @@
 .MainBar{
     display: flex;
-    background-color: blue;
-    height: 40px;
+    background-image: linear-gradient(to left, rgb(228, 129, 0) ,rgb(255, 182, 46),rgb(252, 194, 87), rgb(255, 227, 190));
+    height: 55px;
 }
 .button_margin{
+    margin-left: auto;
     margin-top: 2px;
-    margin-left: 43%;
 }
 .button_left{
-    margin-left: 20px;
     font-size: medium;
-    height: 35px;
+    height: 45px;
+    margin-left: 20px;
 }
 .Logo_margin{
     margin-top: 5px;
     padding-left: 20px;
-    color: white;
 }
 .searchbar_margin{
-    margin-top: 7px;
+    margin-top: 12px;
     margin-left: 20%;
 }
