--- a/src/CustomerSide/RestaurantBody.module.css
+++ b/src/CustomerSide/RestaurantBody.module.css
@@ -8,6 +8,7 @@
 }
 .price
 {
+  margin-bottom: 7px;
   font-weight: 500;
   font-size: 20px;
   width: 325px;
@@ -15,31 +16,34 @@
 }
 .openinghours
 {
+  margin-left: auto;
+  margin-right: auto;
   font-weight: 700;
   font-size: 18px;
-  width: 180px;
+  width: 200px;
   font-weight: lighter;
   display: -webkit-box;
-  -webkit-line-clamp: 3; 
+  -webkit-line-clamp: 4; 
 }
 .type
 {
+  margin-left: auto;
+  margin-right: auto;
   font-weight: 700;
   font-size: 18px;
   margin-bottom: 7px;
   width: 325px;
   font-weight: lighter;
-  display: -webkit-box;
-  -webkit-line-clamp: 4; 
 }
 .address
 {
+  margin-bottom: 7px;
+  margin-left: auto;
+  margin-right: auto;
   font-weight: 700;
   font-size: 18px;
   width: 325px;
   font-weight: lighter;
-  display: -webkit-box;
-  -webkit-line-clamp: 4; 
 }
 .presentationModeGrid
 {
