--- a/src/MainSide/RestaurantBody.module.css
+++ b/src/MainSide/RestaurantBody.module.css
@@ -10,27 +10,27 @@
 {
   font-weight: 500;
   font-size: 20px;
-  width: 325px;
-  font-weight: initial;
+  margin-bottom: 7px;
 }
 .openinghours
 {
+  margin-left: auto;
+  margin-right: auto;
   font-weight: 700;
   font-size: 18px;
-  width: 180px;
+  width: 200px;
   font-weight: lighter;
   display: -webkit-box;
   -webkit-line-clamp: 3; 
 }
 .type
 {
-  font-weight: 700;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 18px;
   margin-bottom: 7px;
   width: 325px;
-  font-weight: lighter;
-  display: -webkit-box;
-  -webkit-line-clamp: 4; 
+  font-weight: lighter; 
 }
 .address
 {
@@ -38,8 +38,7 @@
   font-size: 18px;
   width: 325px;
   font-weight: lighter;
-  display: -webkit-box;
-  -webkit-line-clamp: 4; 
+  margin-bottom: 7px;
 }
 .presentationModeGrid
 {
