Varoitus tekstit lisätty creationiin, loginniin ja shoppingcarttiin

--- a/src/CustomerSide/Customer.module.css
+++ b/src/CustomerSide/Customer.module.css
@@ -32,3 +32,8 @@
     background-color: white;
     margin-left: 68%;
 }
+.orderwarning{
+    font-weight: bold;
+    font-size: small;
+    background-color: lightgreen;
+}
