--- a/src/MainSide/CreateAccount.module.css
+++ b/src/MainSide/CreateAccount.module.css
@@ -47,16 +47,16 @@
     height: 25px;
     -webkit-text-security: disc;
 }
-.checkbox
-{
+.checkbox{
     margin-top: 20px;
-    margin-left: -30px;
+    margin-left: 100px;
     width: 70%;
     height: 25px;
 }
 .checkheader{
-    margin-top: -35px;
-    margin-left: 200px;
+    margin-top: -45px;
+    margin-left: 70px;
+    font-style: italic;
     width: 325px;
     font-size: 18px;
 }
