--- a/src/ManagerSide/Manager.module.css
+++ b/src/ManagerSide/Manager.module.css
@@ -6,6 +6,7 @@
 .button_margin{
     margin-left: auto;
     margin-top: 2px;
+    display: flex;
 }
 .button_left{
     margin-top: 2px;
@@ -22,13 +23,14 @@
 .Log_out_margin{
     font-size: medium;
     font-weight: bold;
-    margin-left: 290px;
-    margin-right: auto;
+    margin-top: 7px;
+    margin-left: 260px;
+    margin-right: 10px;
     height: 35px;
 }
 .select_margin{
     margin-left: 10%;
-    margin-top: 5px;
+    margin-top: 12px;
 }
 .select_size{
     width: 150px;
